@@ -6,7 +6,7 @@ __PACKAGE__->load_components(qw/PK::Auto Core/);
 __PACKAGE__->table('user');
 __PACKAGE__->add_columns(qw/
     user_id username password nickname gender email
-    register_on register_ip active_code has_actived last_login_on last_login_ip login_times
+    register_on register_ip last_login_on last_login_ip login_times
     status threads replies last_post_id lang
     country state_id city_id
 /);
