@@ -1,9 +1,13 @@
 Dear [% username %],
 
-Your activation code is [% active_code %]
-Please copy the url below or Click it:
+Your activation code is [% activation_code %]
+[% IF new_email %]
+Please copy the url below or click it to confirm your new email:
+[% ELSE %]
+Please copy the url below or click it to activate your account:
+[% END %]
 
-[% base %]register/activation/[% username %]/[% active_code %]
+[% base %]register/activation/[% username %]/[% activation_code %]
 
 Thanks.
 
