@@ -3,7 +3,7 @@ Dear [% username %],
 Your new password is [% password %]
 
 Please use this password to login:
-[% base %]register/activation/[% username %]/[% active_code %]
+[% base %]/login
 
 Please use this url to change your password:
 [% base %]/profile/change_password
