@@ -4,7 +4,7 @@
 	<form method='post'>
 	<tr class='title'><td colspan='2'>[% c.loc('Activation') %]</td></tr>
 	<tr class='misc1'><td width='20%' align='right'><label for="username">[% c.loc('Username:') %]</label></td><td><input type='text' name='username' value='[% username || c.user.username %]' length='12' /></td></tr>
-	<tr class='misc2'><td align='right'><label for="active_code">[% c.loc('Active Code:') %]</label></td><td><input type='text' name='active_code' length='12' />[% IF ERROR_UNMATCHED %]the active code is wrong, please try it again[% END %]</td></tr>
+	<tr class='misc2'><td align='right'><label for="activation_code">[% c.loc('Active Code:') %]</label></td><td><input type='text' name='activation_code' length='12' />[% IF ERROR_UNMATCHED %]the active code is wrong, please try it again[% END %]</td></tr>
 	<tr class='misc1'><td> </td><td><input type='submit' /></td></tr>
 	</form>
 	</tbody>
