@@ -9,6 +9,7 @@ This file documents the revision history for Foorum.
     - add a new Model/Validation.pm and remove 'FormValidator::Simple::Plugin::DBIC::Unique' (26/5/2007)
     - add cache for comments (26/5/2007)
     - Foorum::Filter: add textile support and remove 'Template::Plugin::HTML::BBCode' (26/5/2007)
+    - more sane change_email
 
 0.03  Sat May 19 13:24:00 2007
     - remove Plugin::Email. insert into table scheduled_email and use a cron script to send. (19/5/2007)
